# codex

./: defs.bzl
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: 3-cli.yml  5-feature-request.yml  6-docs-issue.yml
.github/scripts/: verify_cargo_workspace_manifests.py
.github/workflows/: bazel.yml  blob-size-policy.yml  close-stale-contributor-prs.yml  codespell.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci-full-nextest-platform.yml  rust-ci-full-targeted-all23-temp.yml  rust-ci-full-targeted-remaining22-inplace-temp.yml  rust-ci-full-targeted-test.yml  rust-ci-full.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release.yml  sdk.yml
codex-rs/: Cargo.toml  README.md  deny.toml
codex-rs/agent-graph-store/: Cargo.toml
codex-rs/ansi-escape/: Cargo.toml
codex-rs/app-server/: BUILD.bazel  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-daemon/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-daemon/src/: managed_install.rs  managed_install_tests.rs  settings.rs  update_loop.rs  update_loop_tests.rs
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-test-client/: Cargo.toml
codex-rs/app-server-transport/: Cargo.toml
codex-rs/app-server-transport/src/transport/: auth.rs
codex-rs/app-server-transport/src/transport/remote_control/: enroll.rs  mod.rs  pairing.rs  pairing_integration_tests.rs  protocol.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  error_code.rs  filters.rs  fs_watch.rs  lib.rs  message_processor.rs  request_processors.rs  request_serialization.rs  skills_watcher.rs  thread_status.rs
codex-rs/app-server/src/config/: external_agent_config.rs
codex-rs/app-server/src/request_processors/: account_processor.rs  catalog_processor.rs  config_errors.rs  environment_processor.rs  external_agent_config_processor.rs  external_agent_config_processor_tests.rs  feedback_doctor_report.rs  git_processor.rs  initialize_processor.rs  marketplace_processor.rs  remote_control_processor.rs  remote_control_processor_tests.rs  request_errors.rs  search.rs  thread_processor.rs  thread_processor_tests.rs  thread_summary.rs  thread_summary_tests.rs  token_usage_replay.rs  turn_processor.rs
codex-rs/app-server/tests/common/: Cargo.toml  mcp_process.rs  rollout.rs
codex-rs/app-server/tests/suite/: conversation_summary.rs  mod.rs  strict_config.rs
codex-rs/app-server/tests/suite/v2/: account.rs  attestation.rs  client_metadata.rs  config_rpc.rs  connection_handling_websocket_unix.rs  dynamic_tools.rs  external_agent_config.rs  initialize.rs  mcp_resource.rs  mod.rs  plugin_share.rs  realtime_conversation.rs  remote_control.rs  remote_thread_store.rs  review.rs  thread_archive.rs  thread_delete.rs  thread_fork.rs  thread_list.rs  thread_metadata_update.rs  thread_name_websocket.rs  thread_read.rs  thread_resume.rs  thread_rollback.rs  thread_start.rs  thread_status.rs  thread_suggest_next_prompt.rs  thread_unarchive.rs  turn_start.rs  turn_start_zsh_fork.rs
codex-rs/apply-patch/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/async-utils/: Cargo.toml
codex-rs/aws-auth/: Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/bwrap/: BUILD.bazel  Cargo.toml  build.rs  config.h
codex-rs/bwrap/src/: main.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/cloud-tasks-mock-client/: Cargo.toml
codex-rs/code-mode/: Cargo.toml
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-experimental-api-macros/: Cargo.toml
codex-rs/codex-mcp/: Cargo.toml
codex-rs/collaboration-mode-templates/: Cargo.toml
codex-rs/connectors/: Cargo.toml
codex-rs/connectors/src/: directory_cache.rs  filter.rs  lib.rs  merge.rs
codex-rs/core/: BUILD.bazel  README.md  config.schema.json
codex-rs/core-api/: Cargo.toml
codex-rs/docs/: codex_mcp_interface.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: BUILD.bazel  Cargo.toml
codex-rs/exec-server/src/: client_api.rs  client_transport.rs  environment_path.rs  environment_provider.rs  relay_proto.rs  remote.rs  server.rs
codex-rs/exec-server/src/proto/: codex.exec_server.relay.v1.proto  codex.exec_server.relay.v1.rs
codex-rs/exec-server/src/server/: processor.rs  transport.rs  transport_tests.rs
codex-rs/exec-server/tests/: file_system.rs  health.rs  websocket.rs
codex-rs/exec-server/tests/common/: exec_server.rs
codex-rs/execpolicy/: Cargo.toml
codex-rs/execpolicy-legacy/: Cargo.toml
codex-rs/feedback/: Cargo.toml
codex-rs/file-search/: Cargo.toml
codex-rs/file-system/: Cargo.toml
codex-rs/file-watcher/: BUILD.bazel  Cargo.toml
codex-rs/file-watcher/src/: file_watcher_tests.rs  lib.rs
codex-rs/git-utils/: Cargo.toml
codex-rs/hooks/: Cargo.toml
codex-rs/hooks/src/: config_rules.rs  declarations.rs  legacy_notify.rs  output_spill.rs  output_spill_tests.rs  registry.rs  schema.rs  types.rs
codex-rs/hooks/src/engine/: discovery.rs  dispatcher.rs  mod.rs  mod_tests.rs  prompt_runner.rs  prompt_runner_tests.rs
codex-rs/hooks/src/events/: mod.rs
codex-rs/keyring-store/: Cargo.toml
codex-rs/linux-sandbox/: BUILD.bazel  build.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/process-hardening/: Cargo.toml
codex-rs/rollout-trace/: Cargo.toml
codex-rs/rollout-trace/src/: lib.rs  mcp.rs  raw_event.rs  thread.rs  tool_dispatch.rs
codex-rs/rollout-trace/src/model/: mod.rs  runtime.rs
codex-rs/rollout-trace/src/reducer/: conversation_tests.rs  mod.rs  tool.rs
codex-rs/rollout-trace/src/reducer/conversation/: normalize.rs
codex-rs/stdio-to-uds/: Cargo.toml
codex-rs/terminal-detection/: Cargo.toml
codex-rs/terminal-detection/src/: lib.rs  terminal_tests.rs
codex-rs/uds/: Cargo.toml
codex-rs/utils/cli/: Cargo.toml
codex-rs/utils/cli/src/: config_override.rs
codex-rs/v8-poc/: BUILD.bazel  Cargo.toml
docs/: config.md
scripts/: test-remote-env.sh
(+909 files in other folders)
