load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "exec-server",
    crate_name = "codex_exec_server",
    deps_extra = [
        "@crates//:toml",
    ],
    # Keep the crate's integration tests single-threaded under Bazel because
    # they install process-global test-binary dispatch state, and the remote
    # exec-server cases already rely on serialization around the full CLI path.
    integration_test_args = ["--test-threads=1"],
    integration_compile_data_extra = [
        "src/proto/codex.exec_server.relay.v1.rs",
    ],
    extra_binaries = [
        "//codex-rs/bwrap:bwrap",
    ],
    test_tags = ["no-sandbox"],
)
