[package]
name = "codex-process-hardening"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_process_hardening"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
