[package]
edition.workspace = true
license.workspace = true
name = "codex-rollout-trace"
version.workspace = true

[lib]
doctest = false
name = "codex_rollout_trace"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-code-mode = { workspace = true }
codex-protocol = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
