[package]
name = "codex-v8-poc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_v8_poc"
path = "src/lib.rs"
doctest = false

[features]
sandbox = ["v8/v8_enable_sandbox"]

[lints]
workspace = true

[dependencies]
v8 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
