[package]
name = "codex-utils-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
codex-protocol = { workspace = true }
codex-shell-command = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
doctest = false
